--- a/service.css
+++ b/service.css
@@ -161,126 +161,98 @@ header .hero-head {
     text-align: center;
 }
 
-main #story {
-    padding: 7rem;
-}
-
-#story h2 {
-    font-size: 1.8rem;
-    font-weight: 500;
-    color: var(--color-text);
-    width:37rem;
-}
-
-#story .grid-story {
-    display: grid;
-    grid-template-columns: 1fr 1fr 0.3fr 0.7fr 0.2fr 0.7fr;
-    grid-template-rows: 3rem 1rem 1rem 5rem 5rem 9rem 4rem;
-    gap:2rem;
-}
-
-.one {
-    background-image: url(./story/About-Image.svg);
-    background-position: center 60rem;
-    background-size: cover;
-    grid-area: 4 / 1 / 7 / auto;
-}
-
-.two {
-    background-image: url(./story/About-Image1.svg);
-    background-position: center 60rem;
-    background-size: cover;
-    grid-area: 3 / 2 / 6 / auto;
-}
-
-.three {
-    background-image: url(./story/About-Image2.svg);
-    background-size: cover;
-    grid-area: 1 / 3 / 6 / 5;
-}
-
-.four {
-    background-image: url(./story/About-Image3.svg);
-    background-size: cover;
-    grid-area: 2 / 5 / 6 / 7;
-}
-
-.five {
-    background-image: url(./story/About-Image4.svg);
-    background-size: cover;
-    grid-area: 6 / 2 / 8 / 4;
-}
-
-.six {
-    background-image: url(./story/About-Image5.svg);
-    background-size: cover;
-    grid-area: 6 / 4 / 8 / 6;
-}
-
-main #challenge {
-    padding: 0 7rem 7rem;
-    display: flex;
-    justify-content: space-between;
-}
-
-#challenge .left-call > h3 {
-    font-size: var(--pri-text);
-    font-weight: 500;
-    color:var(--color-btn);
-}
-
-#challenge .left-call > h2 {
-    font-size: var(--pri-head);
-    font-weight: 500;
-    color:var(--color-text);
-}
-
-#challenge .right-call {
+main #service {
+    padding:7rem;
     display: flex;
     flex-direction: column;
-    width:40rem;
-    gap:2rem;
+    gap:7rem;
 }
 
-#challenge .right-call > h2 {
-    font-size: 1.8rem;
-    font-weight: 500;
-    color: var(--color-text);
-}
-
-#challenge .right-call > p {
-    color: #525B5B;
-    font-size: var(--pri-text);
-}
-
-main #story-flex {
+#service .first-service {
     display: flex;
-    justify-content: space-between;
-    padding: 0 7rem 7rem;
-}
-
-#story-flex div {
-    display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
+    gap:10rem;
+}
+
+#service .first-service img {
+    width: 50rem;
+    height: 40rem;
+}
+
+.first-service .service-info {
+    display: flex;
+    flex-direction: column;
+    gap:4rem;
+}
+
+#service .second-service {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:10rem;
+}
+
+#service .second-service img {
+    width: 50rem;
+    height: 40rem;
+}
+
+.second-service .service-info {
+    display: flex;
+    flex-direction: column;
+    gap:4rem;
+}
+
+.service-info .service-head {
+    display: flex;
+    flex-direction: column;
     gap:1rem;
 }
 
-#story-flex div img {
-    margin-bottom: 2rem;
-    width: 20rem;
+.service-info .service-head > h2 {
+    font-size: var(--pri-head);
+    font-weight: 500;
+    color: var(--color-btn);
 }
 
-#story-flex div > h3 {
+.service-info .service-head > p {
+    font-size: 1.2rem;
+    color: #525B5B;
+}
+
+.service-info .service-main {
+    display: flex;
+    flex-direction: column;
+    gap:1rem;
+}
+
+.service-main .service-text {
+    display: flex;
+    flex-direction: column;
+    gap:1rem;
+}
+
+.service-text .flex-serve {
+    display: flex;
+    gap:2rem;
+    align-items: center;
+}
+
+.service-text .flex-serve > p {
+    font-size: 1.2rem;
+    color:#868b8b
+}
+
+.service-text .flex-serve > h3 {
     font-size: 1.5rem;
-    color: var(--color-btn);
+    color:var(--color-text);
     font-weight: 500;
 }
 
-#story-flex div > p {
-    text-align: center;
-    font-size:  var(--pri-text);
-    color: #525B5B;
+.service-text .next {
+    font-size: var(--pri-text);
+    color:#525B5B;
 }
 
 main #testimonial {
@@ -362,171 +334,6 @@ main #testimonial {
 #testimonial img {
     width:60%;
     height: 47rem;
-}
-
-#team {
-    padding: 7rem 7rem 8rem;
-    display: flex;
-    justify-content: space-between;
-    gap:5rem;
-}
-
-#tteam .team-head {
-    display: flex;
-    flex-direction: column;
-    gap:1rem;
-}
-
-#team .team-head > h3 {
-    font-size: var(--pri-text);
-    font-weight: 500;
-    color:var(--color-btn);
-}
-
-#team .team-head > h2 {
-    font-size: var(--pri-head);
-    color:var(--color-text);
-    font-weight: 500;
-    width:10rem;
-}
-
-#team .team-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 9rem 14rem 9rem 9rem 14rem 9rem;
-    gap:3rem 6rem;
-
-}
-
-#team .team-grid > .first {
-    grid-row: span 2;
-}
-
-#team .team-grid > .meet {
-    display: flex;
-    flex-direction: column;
-    gap:1.5rem;
-}
-
-.meet img {
-    width:100%;
-    height: 100%;
-}
-
-.meet .meet-flex {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.meet-flex h4 {
-    font-size: 1.5rem;
-    font-weight: 500;
-    color: var(--color-text);
-}
-
-.meet-flex p {
-    color: #525B5B;
-    font-size: var(--pri-text);
-}
-
-#team .team-grid > .second {
-    grid-area: 2 / 2 / 4 / auto;
-}
-
-#team .team-grid > .third {
-    grid-area: 4 / 1 / 6 / auto;
-}
-
-#team .team-grid > .fourth {
-    grid-area: 5 / auto / 7 / auto;
-}
-
-main #unlock {
-    padding: 7rem;
-    background-image: url(./home/Section.svg);
-    background-size: cover;
-    width: 100%;
-    height: 50rem;
-}
-
-
-main #unlock > .unlock-flex {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.unlock-flex .head-text {
-    width: 65rem;
-}
-
-.unlock-flex .head-text > h1 {
-    font-size: 4.3rem;
-    font-weight: 500;
-    color:var(--color-main)
-}
-
-#unlock .head-info {
-    display: flex;
-    flex-direction: column;
-    gap:2rem
-}
-
-#unlock .head-info > p {
-    color:var(--color-main);
-    font-size: var(--pri-text);
-    line-height: 1.8rem;
-}
-
-.head-info .head-btn {
-    display: flex;
-    gap: 2rem;
-}
-
-.head-info .head-btn > button:first-child {
-    background-color: var(--color-btn);
-    color:var(--color-main);
-    padding: 0.9rem 1.7rem;
-    font-size: var(--sec-text);
-    border-radius: 2.5rem;
-    border: none;
-    cursor: pointer;
-    display: flex;
-    gap:1rem;
-    align-items: center;
-    outline: none;
-    transition: background-color 0.5s ease;
-}
-
-.head-info .head-btn > button:first-child:hover {
-    background: transparent;
-    color: var(--color-main);
-    border: 1.5px solid #F8F9FA;
-}
-
-.head-btn button > i {
-    transform:scaleX(-1);
-}
-
-.head-info .head-btn > button:last-child {
-    padding: 0.9rem 1.7rem;
-    font-size: var(--sec-text);
-    border-radius: 2.5rem;
-    border: 1.5px solid #F8F9FA;
-    cursor: pointer;
-    display: flex;
-    color:var(--color-main);
-    gap:1rem;
-    align-items: center;
-    outline: none;
-    background: transparent;
-    transition: 0.5s ease;
-}
-
-.head-info .head-btn > button:last-child:hover {
-    background-color: var(--color-btn);
-    border: none;
 }
 
 main #question {
@@ -629,7 +436,94 @@ main #question {
     transform: rotate(180deg); /* Arrow flips */
   }
 
-  footer {
+  main #unlock {
+    padding: 7rem;
+    background-image: url(./home/Section.svg);
+    background-size: cover;
+    width: 100%;
+    height: 50rem;
+}
+
+
+main #unlock > .unlock-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.unlock-flex .head-text {
+    width: 65rem;
+}
+
+.unlock-flex .head-text > h1 {
+    font-size: 4.3rem;
+    font-weight: 500;
+    color:var(--color-main)
+}
+
+#unlock .head-info {
+    display: flex;
+    flex-direction: column;
+    gap:2rem
+}
+
+#unlock .head-info > p {
+    color:var(--color-main);
+    font-size: var(--pri-text);
+    line-height: 1.8rem;
+}
+
+.head-info .head-btn {
+    display: flex;
+    gap: 2rem;
+}
+
+.head-info .head-btn > button:first-child {
+    background-color: var(--color-btn);
+    color:var(--color-main);
+    padding: 0.9rem 1.7rem;
+    font-size: var(--sec-text);
+    border-radius: 2.5rem;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    gap:1rem;
+    align-items: center;
+    outline: none;
+    transition: background-color 0.5s ease;
+}
+
+.head-info .head-btn > button:first-child:hover {
+    background: transparent;
+    color: var(--color-main);
+    border: 1.5px solid #F8F9FA;
+}
+
+.head-btn button > i {
+    transform:scaleX(-1);
+}
+
+.head-info .head-btn > button:last-child {
+    padding: 0.9rem 1.7rem;
+    font-size: var(--sec-text);
+    border-radius: 2.5rem;
+    border: 1.5px solid #F8F9FA;
+    cursor: pointer;
+    display: flex;
+    color:var(--color-main);
+    gap:1rem;
+    align-items: center;
+    outline: none;
+    background: transparent;
+    transition: 0.5s ease;
+}
+
+.head-info .head-btn > button:last-child:hover {
+    background-color: var(--color-btn);
+    border: none;
+}
+
+footer {
     padding: 7rem;
     background-color: var(--color-btn);
     display: flex;
@@ -842,56 +736,34 @@ footer .second-foot > .sixx a {
         width:40rem
     }
 
-    main #story {
-        padding: 3rem 2rem;
-    }
-
-    #story h2 {
-        font-size: 1.8rem;
-        font-weight: 500;
-        color: var(--color-text);
-        width:100%;
-        margin-bottom: 3rem;
+    main #service {
+        display: flex;
+        flex-direction: column;
+        gap:4rem;
+        padding: 4rem 2rem;
     }
     
-    #story .grid-story {
-        display: grid;
-        grid-template-columns: 1fr 1fr 0.3fr 0.7fr 0.2fr 0.7fr;
-        grid-template-rows: 2rem 0.5rem 5rem 4rem 4rem 8rem 3rem;
-        gap:1rem;
-    }
-
-    main #challenge {
-        padding: 3rem 2rem;
+    #service .first-service {
         display: flex;
         flex-direction: column;
-        gap:1rem;
+        gap:3rem;
+
     }
 
-    #challenge .right-call {
+    #service .second-service {
+        flex-direction: column-reverse;
+        gap:3rem;
         display: flex;
-        flex-direction: column;
-        width:100%;
-        gap:1rem;
-    }
-
-    main #story-flex {
-        display: flex;
-        flex-direction: column;
-        padding: 3rem 2rem;
-        gap:5rem;
-    }
-
-    #story-flex div {
-        align-items: start;
     }
     
-    #story-flex div img {
+    #service .first-service img {
         width: 100%;
+        height: auto;
     }
-    
-    #story-flex div > p {
-        text-align: left;
+
+    #service .second-service img {
+        width: 100%;
+        height: auto;
     }
 
     main #testimonial {
@@ -916,27 +788,33 @@ footer .second-foot > .sixx a {
         margin: 2rem 0 1rem 0;
     }
 
-    #team {
-        padding: 3rem 2rem 6rem;
+    main #question {
+        padding: 3rem 2rem;
         display: flex;
         flex-direction: column;
-        gap:3rem;
+        gap: 3rem;
     }
-
-    #team .team-head > h2 {
-        width:100%;
-    }
-
-    #team .team-grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 5rem 10rem 5rem 5rem 10rem 5rem;
-        gap: 5rem 2rem;
     
-    }
-
-    #team .team-grid > .meet img {
+    #question .quest-flex > h2 {
         width: 100%;
+    }
+    
+    .faq .faq-item {
+        width: 100%;
+        border: 1.5px solid #cdcdcd;
+        padding: 1.5rem;
+        border-radius: 1rem;
+    }
+    
+    .faq-item .faq-answer {
+        color: var(--color-text);
+    }
+    
+    .faq .faq-item > .faq-question {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-weight: 500;
     }
 
     main #unlock {
@@ -978,63 +856,33 @@ footer .second-foot > .sixx a {
         gap:2rem;
     }
 
-    main #question {
+    footer {
         padding: 3rem 2rem;
-        display: flex;
-        flex-direction: column;
-        gap: 3rem;
     }
     
-    #question .quest-flex > h2 {
-        width: 100%;
+    footer .first-foot {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto auto;
+        gap: 6rem;
+      }
+    
+    footer .first-foot > .onee {
+        grid-column: span 2;
     }
     
-    .faq .faq-item {
-        width: 100%;
-        border: 1.5px solid #cdcdcd;
-        padding: 1.5rem;
-        border-radius: 1rem;
-    }
+    footer .second-foot {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto auto;
+        gap: 6rem;
+      }
     
-    .faq-item .faq-answer {
-        color: var(--color-text);
+    footer .second-foot > .fourr {
+        grid-column: span 2;
     }
-    
-    .faq .faq-item > .faq-question {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        font-weight: 500;
-    }
-
-    
-footer {
-    padding: 3rem 2rem;
 }
 
-footer .first-foot {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto;
-    gap: 6rem;
-  }
-
-footer .first-foot > .onee {
-    grid-column: span 2;
-}
-
-footer .second-foot {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto;
-    gap: 6rem;
-  }
-
-footer .second-foot > .fourr {
-    grid-column: span 2;
-}
-    
-}
 
 /* Phone breakpoint */
 
@@ -1128,75 +976,34 @@ footer .second-foot > .fourr {
         width:40rem
     }
 
-    main #story {
-        padding: 3rem 2rem;
-    }
-
-    #story h2 {
-        font-size: 1.8rem;
-        font-weight: 500;
-        color: var(--color-text);
-        width:100%;
-        margin-bottom: 3rem;
-    }
-    
-    #story .grid-story {
-        display: grid;
-        grid-template-columns: 1fr 1fr 0.3fr 0.7fr 0.2fr 0.7fr;
-        grid-template-rows: 1rem 0rem 0rem 3rem 3rem 7rem 2rem;
-        gap:1rem;
-    }
-
-    .two {
-        background-image: url(./story/About-Image1.svg);
-        background-size: cover;
-        background-position: unset;
-    }
-
-    
-    .five {
-        background-image: url(./story/About-Image4.svg);
-        background-size: cover;
-        background-position: center;
-    }
-
-    .six {
-        background-image: url(./story/About-Image5.svg);
-        background-size: cover;
-        background-position: center;
-    }
-
-    main #challenge {
-        padding: 3rem 2rem;
+    main #service {
         display: flex;
         flex-direction: column;
-        gap:1rem;
-    }
-
-    #challenge .right-call {
-        display: flex;
-        flex-direction: column;
-        width:100%;
-        gap:1rem;
-    }
-
-    main #story-flex {
-        display: flex;
-        flex-direction: column;
-        padding: 3rem 2rem;
-        gap:5rem;
-    }
-
-    #story-flex div {
-        align-items: start;
+        gap:4rem;
+        padding: 4rem 2rem;
     }
     
-    #story-flex div img {
+    #service .first-service {
+        display: flex;
+        flex-direction: column;
+        gap:3rem;
+
+    }
+
+    #service .second-service {
+        flex-direction: column-reverse;
+        gap:3rem;
+        display: flex;
+    }
+    
+    #service .first-service img {
         width: 100%;
+        height: auto;
     }
-    
-    #story-flex div > p {
-        text-align: left;
+
+    #service .second-service img {
+        width: 100%;
+        height: auto;
     }
 
     main #testimonial {
@@ -1219,69 +1026,6 @@ footer .second-foot > .fourr {
     
     .testimoney h3 {
         margin: 2rem 0 1rem 0;
-    }
-
-    #team {
-        padding: 3rem 2rem 8rem;
-        display: flex;
-        flex-direction: column;
-        gap:3rem;
-    }
-
-    #team .team-head > h2 {
-        width:100%;
-    }
-
-    #team .team-grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 5rem 10rem 5rem 5rem 10rem 5rem;
-        gap: 2rem 2rem;
-    
-    }
-
-    #team .team-grid > .meet img {
-        width: 100%;
-    }
-
-    main #unlock {
-        padding: 3rem 2rem;
-        background-image: url(./home/Section.svg);
-        background-size: cover;
-        height: auto;
-        width: 100%;
-        background-position: -3.5rem;
-    }
-    
-    main #unlock > .unlock-flex {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap:2rem;
-    }
-    
-    .unlock-flex .head-text {
-        width: 100%;
-    }
-    
-    .unlock-flex .head-text > h1 {
-        width: 100%;
-        text-align: center;
-        font-size: 3rem;
-        line-height: 3rem;
-    }
-    
-    #unlock .head-info > p {
-        color:var(--color-main);
-        font-size: 1.5rem;
-        line-height: 1.8rem;
-        text-align: center;
-    }
-    
-    .head-info .head-btn {
-        display: flex;
-        justify-content: center;
-        gap:2rem;
     }
 
     main #question {
@@ -1326,6 +1070,46 @@ footer .second-foot > .fourr {
         width:18rem;
     }
 
+    main #unlock {
+        padding: 3rem 2rem;
+        background-image: url(./home/Section.svg);
+        background-size: cover;
+        height: auto;
+        width: 100%;
+        background-position: -3.5rem;
+    }
+    
+    main #unlock > .unlock-flex {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap:2rem;
+    }
+    
+    .unlock-flex .head-text {
+        width: 100%;
+    }
+    
+    .unlock-flex .head-text > h1 {
+        width: 100%;
+        text-align: center;
+        font-size: 3rem;
+        line-height: 3rem;
+    }
+    
+    #unlock .head-info > p {
+        color:var(--color-main);
+        font-size: 1.5rem;
+        line-height: 1.8rem;
+        text-align: center;
+    }
+    
+    .head-info .head-btn {
+        display: flex;
+        justify-content: center;
+        gap:2rem;
+    }
+
     footer {
         padding: 3rem 2rem;
     }
@@ -1351,5 +1135,4 @@ footer .second-foot > .fourr {
     footer .second-foot > .fourr {
         grid-column: span 2;
     }
-
 }
